# Berlin-App

./: .env.example  .gitignore  README.md  app.py  neighborhood_labels_with_venues.csv  pyproject.toml  requirements.txt
data/raw/: berlin_districts_enriched.csv  bus_tram_stops.csv  neighborhoods.geojson  neighbornhoods.csv  parks.csv  playgrounds.csv  regional_statistics.csv  ubahns.csv  venues.csv
docs/: app.md
labels_with_visualization/: districts_enriched.ipynb  districts_with_income.ipynb  mobility.ipynb  neighborhoods_combined_map.ipynb  parks.ipynb  playgrounds.ipynb  venues.ipynb
labels_with_visualization/outputs/: .~lock.berlin_districts_labels_wide.csv#  berlin_districts_labels_long.csv  berlin_districts_labels_wide.csv  berlin_neighborhoods_labels_long.csv  berlin_neighborhoods_labels_wide.csv  district_labels_density.csv  district_labels_diversity.csv  district_labels_income.csv  district_labels_income_safety.csv  district_labels_mobility.csv  district_labels_parks.csv  district_labels_playgrounds.csv  district_labels_safety.csv  parks_map_districts.html  (+14 more)
outputs/: features_venues_nationals.csv  features_venues_vibrancy.csv  mobility_labels.csv  neighborhood_labels_minimal.csv  neighborhood_labels_readable.csv  neighborhood_labels_with_venues.csv  neighborhoods.geojson  parks_features.csv  playgrounds_features.csv
preprocessing/: ubahn_bus_and_tram_analysis.ipynb
scripts/: build_mobility.py  build_parks.py  build_playgrounds.py  build_polygons.py  build_venues.py  merge_all_labels.py  quickcheck_maps.py  run_all.py
tests/: test_geo.py  test_text.py
(+12 files in other folders)
